@@ -1,3 +1,9 @@
+2011-09-29  Andreas Kupries  <andreask@activestate.com>
+
+	* tkchat.tcl: [Bug 3379933]: Accepted and applied patch by Mark
+	Janssen to display history through a text peer, should peering be
+	available (Tk 8.5+)
+
 2011-03-23  Reinhard Max  <max@suse.de>
 
 	* tkchat.tcl (::tkchat::parseStr): Render words of 10..40
